Revert "fix(contrast-theme): fixed failing WCAG-AAA checks"

--- a/client/styles/components/_p5-contrast-codemirror-theme.scss
+++ b/client/styles/components/_p5-contrast-codemirror-theme.scss
@@ -14,7 +14,7 @@ $p5-contrast-black: #333;
 $p5-contrast-gray: #A0A0A0;
 $p5-contrast-white: #FDFDFD;
 $p5-contrast-darkgray: #333333;
-$p5-contrast-lightgray: #f2f2f2;
+$p5-contrast-lightgray: #C1C1C1;
 $p5-contrast-blue: #00FFFF;
 $p5-contrast-green: #2DE9B6;
 $p5-contrast-yellow: #F5DC23;
@@ -31,47 +31,47 @@ $p5-contrast-activeline: #999999;
   color: $p5-contrast-white;
 }
 
-.cm-s-p5-contrast span .cm-comment {
+.cm-s-p5-contrast .cm-comment {
   color: $p5-contrast-lightgray;
 }
 
-.cm-s-p5-contrast span .cm-def {
+.cm-s-p5-contrast .cm-def {
   color: $p5-contrast-blue;
 }
 
-.cm-s-p5-contrast span .cm-string {
+.cm-s-p5-contrast .cm-string {
   color: $p5-contrast-green;
 }
 
-.cm-s-p5-contrast span .cm-string-2 {
+.cm-s-p5-contrast .cm-string-2 {
   color: $p5-contrast-green;
 }
 
-.cm-s-p5-contrast span .cm-number {
+.cm-s-p5-contrast .cm-number {
   color: $p5-contrast-pink;
 }
 
-.cm-s-p5-contrast span .cm-keyword {
+.cm-s-p5-contrast .cm-keyword {
   color: $p5-contrast-yellow;
 }
 
-.cm-s-p5-contrast span .cm-variable {
+.cm-s-p5-contrast .cm-variable {
   color: $p5-contrast-white;
 }
 
-.cm-s-p5-contrast span .cm-variable-2 {
+.cm-s-p5-contrast .cm-variable-2 {
   color: $p5-contrast-white;
 }
 
-.cm-s-p5-contrast span .cm-property {
+.cm-s-p5-contrast .cm-property {
   color: $p5-contrast-white;
 }
 
-.cm-s-p5-contrast span .cm-atom {
+.cm-s-p5-contrast .cm-atom {
   color: $p5-contrast-pink;
 }
 
-.cm-s-p5-contrast span .cm-operator {
+.cm-s-p5-contrast .cm-operator {
   color: $p5-contrast-lightgray;
 }
 
@@ -79,7 +79,7 @@ $p5-contrast-activeline: #999999;
   color: $p5-contrast-number;
 }
 
-.cm-s-p5-contrast div .CodeMirror-selected {
+.cm-s-p5-contrast .CodeMirror-selected {
   background-color: $p5-contrast-selected;
 }
 
@@ -96,25 +96,25 @@ $p5-contrast-activeline: #999999;
   color: #f00;
 }
 
-.cm-s-p5-contrast span.CodeMirror-matchingbracket {
+.cm-s-p5-contrast .CodeMirror-matchingbracket {
   outline: 1px solid $p5-contrast-lightgray;
   outline-offset: 1px;
   color: $p5-contrast-white !important;
 }
 
-.cm-s-p5-contrast span .cm-qualifier {
+.cm-s-p5-contrast .cm-qualifier {
   color: $p5-contrast-yellow;
 }
 
-.cm-s-p5-contrast span .cm-tag {
+.cm-s-p5-contrast .cm-tag {
   color: $p5-contrast-orange;
 }
 
-.cm-s-p5-contrast span.cm-builtin {
+.cm-s-p5-contrast .cm-builtin {
   color: $p5-contrast-yellow;
 }
 
-.cm-s-p5-contrast span .cm-attribute {
+.cm-s-p5-contrast .cm-attribute {
   color: $p5-contrast-white;
 }
 
